--- a/package.json
+++ b/package.json
@@ -2,18 +2,24 @@
   "name": "full-stack-twitter-clone",
   "private": true,
   "engines": {
-    "node": "^16.17"
+    "node": "^16.14.2"
   },
   "dependencies": {
     "@babel/preset-react": "^7.16.7",
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.4.3",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "bootstrap": "^5.1.3",
+    "fetch-helpers": "^9.0.0",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
+    "react-bootstrap-buttons": "^1.0.0",
+    "react-bootstrap-validation": "^0.1.11",
     "react-dom": "^17.0.2",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
