--- a/package.json
+++ b/package.json
@@ -4,6 +4,11 @@
   "engines": {
     "node": "^16.14.2"
   },
+  "scripts": {
+    "lint": "eslint",
+    "lint:fix": "npm run lint -- --fix",
+    "format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc"
+  },
   "dependencies": {
     "@babel/preset-react": "^7.16.7",
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
@@ -26,6 +31,15 @@
   },
   "version": "0.1.0",
   "devDependencies": {
+    "eslint": "^7.32.0 || ^8.2.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "prettier": "^2.8.8",
     "webpack-dev-server": "^3"
   }
 }
